# vulkan-redux

./: CMakeLists.txt  README.md
cmake/: shader_macros.cmake
src/: CMakeLists.txt
src/001_drawing-a-triangle/: CMakeLists.txt
src/001_drawing-a-triangle/000_setup_base-code/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/001_setup_instance/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/002_setup_instance/: main_original.cpp
src/001_drawing-a-triangle/002_setup_validation-layers/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/003_setup_physical-devices-and-queue-families/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/003_setup_validation-layers/: main.cpp
src/001_drawing-a-triangle/004_setup_logical-device-and-queues/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/005_presentation_window-surface/: CMakeLists.txt  main_original.cpp
src/001_drawing-a-triangle/006_presentation_swap-chain/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/006_presentation_window-surface/: main.cpp
src/001_drawing-a-triangle/007_presentation_image-views/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/008_graphics-pipeline-basics_introduction/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/008_presentation_image-views/: CMakeLists.txt  main_original.cpp
src/001_drawing-a-triangle/009_graphics-pipeline-basics_introduction/: main_original.cpp
src/001_drawing-a-triangle/009_graphics-pipeline-basics_shader-modules/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/010_graphics-pipeline-basics_fixed-functions/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/010_graphics-pipeline-basics_shader-modules/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/011_graphics-pipeline-basics_fixed-functions/: main.cpp
src/001_drawing-a-triangle/011_graphics-pipeline-basics_render-passes/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/012_graphics-pipeline-basics_conclusion/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/012_graphics-pipeline-basics_render-passes/: main.cpp  main_original.cpp
src/001_drawing-a-triangle/013_drawing_framebuffers/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/013_graphics-pipeline-basics_conclusion/: main.cpp  main_original.cpp
src/001_drawing-a-triangle/014_drawing_command-buffers/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/014_drawing_framebuffers/: main.cpp
src/001_drawing-a-triangle/015_drawing_command-buffers/: main.cpp
src/001_drawing-a-triangle/015_drawing_rendering-and-presentation/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/016_drawing_frames-in-flight/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/016_drawing_rendering-and-presentation/: main.cpp
src/001_drawing-a-triangle/017_drawing_frames-in-flight/: CMakeLists.txt  main.cpp  main_original.cpp
src/001_drawing-a-triangle/017_swap-chain-recreation/: CMakeLists.txt  main.cpp
src/001_drawing-a-triangle/018_swap-chain-recreation/: main.cpp  main_original.cpp
src/002_vertex-buffers/: CMakeLists.txt
src/002_vertex-buffers/018_vertex-input-description/: CMakeLists.txt  main.cpp  main_original.cpp
src/002_vertex-buffers/019_vertex-buffer-creation/: CMakeLists.txt  main.cpp  main_original.cpp
src/002_vertex-buffers/019_vertex-input-description/: README.md  main.cpp
src/002_vertex-buffers/020_staging-buffer/: CMakeLists.txt  main.cpp  main_original.cpp
src/002_vertex-buffers/020_vertex-buffer-creation/: CMakeLists.txt  main.cpp
src/002_vertex-buffers/021_index-buffer/: CMakeLists.txt  main.cpp  main_original.cpp
src/002_vertex-buffers/021_staging-buffer/: main.cpp
src/002_vertex-buffers/022_index-buffer/: CMakeLists.txt  main.cpp
src/003_setup_validation-layers/: CMakeLists.txt
src/003_uniform-buffers/: CMakeLists.txt
src/003_uniform-buffers/022_descriptor-layout-and-buffer/: CMakeLists.txt  main.cpp  main_original.cpp
src/003_uniform-buffers/023_descriptor-layout-and-buffer/: main.cpp
src/003_uniform-buffers/023_descriptor-pool-and-sets/: CMakeLists.txt  main.cpp  main_original.cpp
src/003_uniform-buffers/024_descriptor-pool-and-sets/: main.cpp
src/004_setup_physical-devices-and-queue-families/: CMakeLists.txt  main.cpp
src/004_texture-mapping/: CMakeLists.txt
src/004_texture-mapping/024_images/: CMakeLists.txt  main.cpp  main_original.cpp
src/004_texture-mapping/025_image-view-and-sampler/: CMakeLists.txt  main.cpp  main_original.cpp
src/004_texture-mapping/025_images/: CMakeLists.txt  main.cpp
src/004_texture-mapping/026_combined-image-sampler/: CMakeLists.txt  main.cpp  main_original.cpp
src/004_texture-mapping/026_image-view-and-sampler/: CMakeLists.txt  main.cpp
src/004_texture-mapping/027_combined-image-sampler/: CMakeLists.txt  main.cpp
src/005_depth-buffering/: CMakeLists.txt
src/005_depth-buffering/027_depth-buffering/: CMakeLists.txt  main.cpp  main_original.cpp
src/005_setup_logical-device-and-queues/: main.cpp
src/006_loading-models/: CMakeLists.txt
src/006_loading-models/028_loading-models/: CMakeLists.txt  main.cpp  main_original.cpp  tiny_obj_loader.h
src/006_presentation_window-surface/: CMakeLists.txt  main.cpp
src/007_generating-mipmaps/: CMakeLists.txt
src/007_generating-mipmaps/029_generating-mipmaps/: CMakeLists.txt  main.cpp  main_original.cpp
src/007_presentation_swap-chain/: main.cpp
src/008_multisampling/: CMakeLists.txt
src/010_graphics-pipeline-basics_shader-modules/: main.cpp
src/012_graphics-pipeline-basics_render-passes/: main.cpp
src/013_graphics-pipeline-basics_conclusion/: CMakeLists.txt
src/014_drawing_framebuffers/: CMakeLists.txt  main.cpp
src/016_drawing_rendering-and-presentation/: CMakeLists.txt
src/017_drawing_frames-in-flight/: main.cpp
src/018_swap-chain-recreation/: CMakeLists.txt  main.cpp
src/drawing-a-triangle/: CMakeLists.txt
src/uniform-buffers/: CMakeLists.txt
(+22 files in other folders)
