cmake_minimum_required(VERSION 3.17)
project(VulkanRedux)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
include(shader_macros)

#######################################################################################################################
# Project global variables.                                                                                           #
#######################################################################################################################

set(TUTORIAL_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
message(STATUS "Vulkan tutorial include directory is '${TUTORIAL_INCLUDE_DIR}'")
include_directories(${TUTORIAL_INCLUDE_DIR})

#######################################################################################################################
# Pick up GLM                                                                                                         #
#######################################################################################################################
find_package(glm CONFIG REQUIRED)

#######################################################################################################################
# Pick up GLFW                                                                                                        #
#######################################################################################################################
find_package(glfw3 CONFIG REQUIRED)
find_glslc_compiler()
message(STATUS "glslc executable is '${GLSLC_EXECUTABLE}'")

#######################################################################################################################
# Pick up Vulkan                                                                                                      #
#######################################################################################################################
find_package(Vulkan REQUIRED)

#######################################################################################################################
# Project subdirectories                                                                                              #
#######################################################################################################################
add_subdirectory(src)