add_subdirectory(000_setup_base-code)
add_subdirectory(002_setup_instance)
add_subdirectory(003_setup_validation-layers)
add_subdirectory(004_setup_physical-devices-and-queue-families)
add_subdirectory(005_setup_logical-device-and-queues)

add_subdirectory(006_presentation_window-surface)
add_subdirectory(007_presentation_swap-chain)
add_subdirectory(008_presentation_image-views)

add_subdirectory(009_graphics-pipeline-basics_introduction)
add_subdirectory(010_graphics-pipeline-basics_shader-modules)
add_subdirectory(011_graphics-pipeline-basics_fixed-functions)
add_subdirectory(012_graphics-pipeline-basics_render-passes)
add_subdirectory(013_graphics-pipeline-basics_conclusion)

add_subdirectory(014_drawing_framebuffers)
add_subdirectory(015_drawing_command-buffers)
add_subdirectory(016_drawing_rendering-and-presentation)
add_subdirectory(017_drawing_frames-in-flight)

add_subdirectory(018_swap-chain-recreation)
